[tool.poetry]
name = "electric-vehicle-range-prediction"
version = "0.1.0"
description = "A project for predicting the range of electric vehicles."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
numpy = "^1.25.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
